# vx_lib

./: .gitmodules  cmakelists.txt  readme.md
libs/: CMakeLists.txt
libs/glad/: CMakeLists.txt
libs/glad/includes/glad/: glad.h
libs/glad/src/: glad.c
libs/handmademath/: CMakeLists.txt
libs/handmademath/includes/: hmm_helper.h
libs/handmademath/src/: hmm_helper.c
libs/nuklear/: CMakeLists.txt
libs/nuklear/includes/: nuklear_args.h  nuklear_glfw_sokol.h  nuklear_sokol.h
libs/nuklear/src/: nuklear_impl.c
libs/sokol/: CMakeLists.txt
libs/sokol/includes/: sokol_args.h
libs/sokol/src/: sokol_impl.c
src/: CMakeLists.txt
src/common/: CMakeLists.txt  vx_definitions.h.in
src/gfx/: CMakeLists.txt  camera.c  camera.h
src/logic/: CMakeLists.txt  logic.h  transform.c  transform.h
src/logic/components/: components.h  position.h  rotation.h
src/os/: CMakeLists.txt  input_helper.c  input_helper.h  key_state.h  os.h  state_manager.c  state_manager.h  user_state_ptr.h  window.c  window.h  window_control.c  window_control.h  window_descriptor.h
src/os/context/: opengl.c  opengl.h  sokol.c  sokol.h
src/os/nuklear/: input_helper.c  input_helper.h
